--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,12 @@
+/* Default resets */
+
+html,
+body,
+#root {
+  min-height: 100%;
+  height: 100%;
+}
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
