--- a/src/index.css
+++ b/src/index.css
@@ -1,12 +1,5 @@
 /* Default resets */
 
-html,
-body,
-#root {
-  min-height: 100%;
-  height: 100%;
-}
-
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
@@ -14,6 +7,7 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background: #f3f4f8;
 }
 
 code {
